2003-11-13  Alexandre Duret-Lutz  <adl@gnu.org>

	* m4/mkdirp.m4: Do not require AM_AUX_DIR_EXPAND.

2003-11-12  Alexandre Duret-Lutz  <adl@gnu.org>

	* automake.in (scan_autoconf_traces): Honor sinclude.
	* tests/sinclude.test: Check for sinclude.
	Report from Roberto Bagnara.

2003-11-11  Alexandre Duret-Lutz  <adl@gnu.org>

	* Makefile.am: Do not rerun `make dist' after tagging, `make distcheck'
	already build the tarballs.  Commit files right before tagging.
	Check NEWS before running distcheck.

	* m4/amversion.in (AM_AUTOMAKE_VERSION): Missing cosmetic space.

	* configure.ac, NEWS: Bump version to 1.7c.

	* configure.ac, NEWS: Bump version to 1.7b.
	* Makefile.am (maintainer-check): Ignore comments while
	scanning for rm without -f.

	* Makefile.am (fetch): Get all files from savannah.  Do not
	postprocess Struct.pm and XFiles.pm, since we now are the master
	of these.
	* lib/config.sub, lib/config.guess, lib/config-ml.in,
	lib/texinfo.tex: New upstream versions.

	* configure.ac: Check that autoconf is installed, that it works,
	and that it is recent enough in three steps, not one.

	* NEWS: Minor edits.

	* lib/Makefile.am (dist_script_DATA): Move config-ml.in ...
	(dist_pkgvdata_DATA): ... here.

	* tests/spy.test: Document overlapping ::-rules incompatibilities,
	and check only non-overlapping ::-rules.

	* doc/automake.texi (Texinfo): Define MAKEINFO, MAKEINFOHTML,
	MAKEINFOFLAGS, AM_MAKEINFOFLAGS, AM_MAKEINFOHTMLFLAGS, TEXI2DVI,
	TEXI2PDF, DVIPS, and TEXINFO_TEX in a table.
	(Uniform): Do not speak of missing HTML support, this is
	confusing.
	* lib/Automake/Variable.pm (_silent_variable_override): Add
	AM_MAKEINFOHTMLFLAGS.
	* lib/am/texibuild.am (%SOURCE_SUFFIX%.html): Use MAKEINFOHTML and
	AM_MAKEINFOHTMLFLAGS instead of MAKEINFO and AM_MAKEINFOFLAGS.
	* lib/am/texinfos.am (MAKEINFOHTML, AM_MAKEINFOHTMLFLAGS): Define.
	* tests/txinfo21.test: Add a test with AM_MAKEINFOHTMLFLAGS.

2003-11-10  Alexandre Duret-Lutz  <adl@gnu.org>
