@@ -1,5 +1,5 @@
 #! /bin/sh
-# Copyright (C) 1996, 1997, 2001, 2002  Free Software Foundation, Inc.
+# Copyright (C) 1996, 1997, 2001, 2002, 2003  Free Software Foundation, Inc.
 #
 # This file is part of GNU Automake.
 #
@@ -22,6 +22,10 @@
 
 . ./defs || exit 1
 
+set -e
+
+echo AC_OUTPUT >> configure.in
+
 cat > Makefile.am << 'END'
 AUTOMAKE_OPTIONS = no-installman
 man_MANS = foo.1
@@ -29,14 +33,10 @@ END
 
 : > foo.1
 
-cat > mkinstalldirs << 'END'
-echo "$@"
-END
+$ACLOCAL
+$AUTOCONF
+$AUTOMAKE
+./configure --prefix `pwd`/sub
 
-chmod +x mkinstalldirs
-
-$ACLOCAL || exit 1
-$AUTOMAKE || exit 1
-
-($MAKE -s -f Makefile.in installdirs | grep man) && exit 1
-exit 0
+$MAKE installdirs
+test ! -d sub/man
