@@ -1,5 +1,7 @@
 2003-11-13  Alexandre Duret-Lutz  <adl@gnu.org>
 
+	* tests/mkinst2.test: Rewrite.
+
 	* m4/mkdirp.m4: Do not require AM_AUX_DIR_EXPAND.
 
 2003-11-12  Alexandre Duret-Lutz  <adl@gnu.org>
